src/test/phase1/extra/test_1_s13.out
Error type B at Line 3: Missing closing bracket ']'
Error type B at Line 5: Missing closing parenthesis ')'
Error type B at Line 7: Missing closing brace '}'
