src/test/phase1/extra/test_1_s13.spl
int test_2_r04 (){
    int a = 5;
    a = a [+2;
    while(true){
        max( a , a + 2;
    
    }